# MK-ServerLauncherDesktop

./: README.md  idk.bat  idk.txt
CodeManStudio/Desktop/: CMakeLists.txt  CMxMU_MSL.py  Client.ui  client.py  client.ui  pyproject.toml
CodeManStudio/Desktop/CMSToolkit/include/: cms_toolkit_dll.hpp  cms_utils.hpp
CodeManStudio/Desktop/core/: CMxMU_MSL.py  client_UI.py
CodeManStudio/Desktop/core/Api/TCP_Func/: __init__.py
CodeManStudio/Desktop/core/Api/UDP_Func/: core.py  udp_ping.py
CodeManStudio/Desktop/core/C/: algorithms.c
CodeManStudio/Desktop/core/qt_ui/: client_UI.ui
CodeManStudio/Desktop/src/: MainWindow.cpp  MainWindow.hpp  WebSocketManager.cpp  WebSocketManager.hpp  main.cpp  pyproject.toml
CodeManStudio/Desktop/src/core/: CMxMU_MSL.py  client_Res.py  client_UI.py
CodeManStudio/Desktop/src/core/Api/: __init__.py
CodeManStudio/Desktop/src/core/Api/TCP_Func/: __init__.py
CodeManStudio/Desktop/src/core/C/: algorithms.cp310-win_amd64.pyd  algorithms.pyx
CodeManStudio/Desktop/src/core/C/cpp/cms_C/: cms.cpp  cms.h  cms_C.sln  cms_C.vcxproj  cms_C.vcxproj.filters  tree.txt
CodeManStudio/Desktop/src/core/C/cpp/cms_C/cms_C/x64/Debug/: cms_C.dll.recipe  cms_C.ilk  cms_C.pyd.recipe  vc143.idb
CodeManStudio/Desktop/src/core/C/cpp/cms_C/cms_C/x64/Debug/cms_C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cms_C.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CodeManStudio/Desktop/src/core/C/cpp/cms_C/cms_C/x64/Release/: cms_C.dll.recipe  cms_C.ipdb  cms_C.pyd.recipe
CodeManStudio/Desktop/src/core/C/cpp/cms_C/cms_C/x64/Release/cms_C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cms_C.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CodeManStudio/Desktop/src/core/C/cpp/cms_C/x64/Debug/: cms_C.exp  cms_C.lib
CodeManStudio/Desktop/src/core/C/cpp/cms_C/x64/Release/: cms_C.exp  cms_C.pyd
CodeManStudio/Desktop/src/core/C/cython/: setup.py
CodeManStudio/Desktop/src/core/qt_ui/: client_Res.qrc  client_UI.ui
MuCore/src/main/kotlin/me/mucloud/application/mk/serverlauncher/: MuCoreMini.kt
MuCore/src/main/kotlin/me/mucloud/application/mk/serverlauncher/mucore/: MuConfiguration.kt
MuCore/src/main/kotlin/me/mucloud/application/mk/serverlauncher/muenv/: EnvPool.kt  JavaEnvironment.kt
MuCore/src/main/kotlin/me/mucloud/application/mk/serverlauncher/mupacket/api/: AbstractMuPacket.kt  MuPacket.kt  MuPacketFactory.kt
MuCore/src/main/kotlin/me/mucloud/application/mk/serverlauncher/muserver/: MCJEServer.kt  MCJEServerType.kt  ServerPool.kt
MuView/src/main/kotlin/me/mucloud/application/mk/serverlauncher/muview/: Application.kt
MuView/src/main/kotlin/me/mucloud/application/mk/serverlauncher/muview/view/: ServerRouter.kt
